# game-old

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  cyvmath
data/start-positions/: black.json  white.json
lodepng/: texturemaker.hpp
src/: board.cpp  board.hpp  common.hpp  cyvasse_app.cpp  cyvasse_app.hpp  cyvasse_ws_client.cpp  cyvasse_ws_client.hpp  hexagon_board.hpp  hexagon_board.inl  hexagon_board.ipp  ingame_state.cpp  ingame_state.hpp  local_player.cpp  local_player.hpp  main.cpp  remote_player.cpp  remote_player.hpp  rendered_fortress.cpp  rendered_fortress.hpp  rendered_match.cpp  rendered_match.hpp  rendered_piece.cpp  rendered_piece.hpp  rendered_terrain.cpp  rendered_terrain.hpp  rule_set.cpp  rule_set.hpp  rule_set_base.hpp  ruleset.cpp  ruleset.hpp  websocket_impl_emscripten.hpp  websocket_impl_emscripten.inl  websocket_impl_native.hpp  websocket_impl_native.inl
src/boards/: hexagonal_board.cpp  hexagonal_board.hpp
src/mikelepage/: local_player.cpp  local_player.hpp  mikelepage_rule_set.cpp  mikelepage_rule_set.hpp  remote_player.cpp  remote_player.hpp  rendered_fortress.cpp  rendered_fortress.hpp  rendered_match.cpp  rendered_match.hpp  rendered_piece.cpp  rendered_piece.hpp  rendered_terrain.cpp  rendered_terrain.hpp
src/rule_sets/: mikelepage_rule_set.cpp  mikelepage_rule_set.hpp
src/rulesets/: mikelepage_ruleset.cpp  mikelepage_ruleset.hpp
